deployment/k8s/bootstrap/base/istio/virtualService.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: lisa-virtual-service
spec:
  hosts:
    - placeholder
  gateways:
    - placeholder
  http:
    - match:
        - uri:
            prefix: /transparent-proxy
        - headers:
            "@request.auth.claims.groups":
              exact: lisa-access-xxxxxx
      route:
        - destination:
            host: lisa-transparent-proxy
            port:
              number: 80
    - match:
        - uri:
            prefix: /api
      headers:
        response:
          add:
            Cache-Control: "no-cache, no-store, must-revalidate"
            Pragma: "no-cache"
            Expires: "0"
            Content-Security-Policy: "placeholder"
            Access-Control-Allow-Origin: "placeholder"
      route:
        - destination:
            host: lisa-backend
            port:
              number: 80

    # Rule for root ("/") to prevent caching and add CSP header
    - match:
        - uri:
            exact: /
      headers:
        response:
          add:
            Cache-Control: "no-cache, no-store, must-revalidate"
            Pragma: "no-cache"
            Expires: "0"
            Content-Security-Policy: "placeholder"
            Access-Control-Allow-Origin: "placeholder"
      route:
        - destination:
            host: lisa
            port:
              number: 80

    # Rule for all other paths with the CSP header
    - match:
        - uri:
            prefix: /
      rewrite:
        uriRegexRewrite:
          match: ^/(/|$)(.*)
          rewrite: /\2
      headers:
        response:
          add:
            Content-Security-Policy: "placeholder"
            Access-Control-Allow-Origin: "placeholder"
      route:
        - destination:
            host: lisa
            port:
              number: 80
